--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
             Understand Emotion, Decoding Human Expressions with Every Snap!</a>
     </div>
 
+    <button id="start">
+        Start Now
+    </button>
+
     <div id="hero">
         <!-- Hero Image -->
     </div>
 </body>
+<script>
+    document.getElementById('start').addEventListener('click', function() {
+        window.location.href = 'home.html';
+    });
+</script>
 </html>
